--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.4.1",
+    "@tanstack/react-query": "^5.56.2",
     "react": "18.2.0",
-    "react-native": "0.73.9"
+    "react-native": "0.73.9",
+    "react-native-mmkv": "^3.0.2",
+    "react-query": "^3.39.3",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
