--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "start": "react-native start --experimental-debugger",
+    "test": "jest",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
     "@react-native-community/netinfo": "^11.4.1",
     "@tanstack/react-query": "^5.56.2",
     "react": "18.2.0",
     "react-native": "0.73.9",
-    "react-native-mmkv": "^3.0.2",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-query": "^3.39.3",
     "zustand": "^5.0.0-rc.2"
   },
@@ -32,10 +33,14 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-devtools": "^5.3.1",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
+  },
+  "resolutions": {
+    "react-devtools-core": "~4.28.0"
   }
 }
