--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/native": "^6.1.18",
     "@tanstack/react-query": "^5.56.2",
     "react": "18.2.0",
     "react-native": "0.73.9",
