--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start --experimental-debugger",
+    "start": "react-native start",
     "test": "jest",
     "react-devtools": "react-devtools"
   },
   "dependencies": {
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@tanstack/react-query": "^5.56.2",
     "react": "18.2.0",
     "react-native": "0.73.9",
+    "react-native-background-actions": "^4.0.1",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "react-query": "^3.39.3",
     "zustand": "^5.0.0-rc.2"
   },
@@ -40,8 +44,5 @@
   },
   "engines": {
     "node": ">=18"
-  },
-  "resolutions": {
-    "react-devtools-core": "~4.28.0"
   }
 }
