--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@tanstack/react-query": "^5.56.2",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.9",
     "react-native-background-actions": "^4.0.1",
